CW-1290-Add-Duress-pin-feature (#2664)
* add duress PIN feature

* add localization

* Update configure.dart

* Update configure.dart

* add duress PIN validation logic

* - fix error popup
- put behind a feature flag

---------

Co-authored-by: OmarHatem <omarh.ismail1@gmail.com>

--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -279,6 +279,7 @@
   "deuro_tx_commited_content": "Գործարքի հաստատման եւ արտացոլվելու համար գործարքի համար կարող է տեւել մի քանի վայրկյան",
   "device_is_signing": "Սարքը ստորագրում է",
   "dfx_option_description": "Գնեք կրիպտոարժույթ EUR և CHF: Կորպորատիվ և մանրածախ հաճախորդների համար Եվրոպայում",
+  "did_you_back_up_seeds": "Դուք կրկնօրինակե՞լ եք ձեր բոլոր սերմերը:",
   "didnt_get_code": "Չեք ստացել կոդը?",
   "digit_pin": "-նիշ ՊԻՆ",
   "digital_and_physical_card": " թվային և ֆիզիկական նախավճարային դեբետային քարտ",
@@ -310,6 +311,9 @@
   "domain_mismatch_description": "Այս կայքը ունի տիրույթ, որը չի համապատասխանում այս խնդրանքի ուղարկողին: Հաստատումը կարող է հանգեցնել միջոցների կորստի:",
   "donation_link_details": "Նվիրատվության հղումի մանրամասներ",
   "done": "Արված",
+  "duress_pin_description": "Սա կստեղծի Duress PIN-ը, առաջադեմ գործառույթ, որը չպետք է օգտագործվի օգտատերերի մեծ մասի կողմից: Այս PIN-ը պետք է օգտագործվի միայն այն դեպքում, եթե դուք վտանգի տակ եք: Այս PIN-ն օգտագործելուց հետո ձեր բոլոր դրամապանակները կջնջվեն, ուստի նախքան այն օգտագործելը համոզվեք, որ ձեր բոլոր սերմերը պահուստավորված են:",
+  "durres_PIN": "Պարտադիր PIN",
+  "durres_PIN_set_up_successfully": "Duress PIN-ը հաջողությամբ կարգավորվել է",
   "e_sign_consent": "Էլեկտրոնային ստորագրության համաձայնություն",
   "edit": "Խմբագրել",
   "edit_backup_password": "Փոփոխել Կրկնօրինակի Գաղտնաբառը",
@@ -549,6 +553,7 @@
   "new_transactions_notifications": "Ուղարկեք ծանուցումներ նոր գործարքների վերաբերյալ",
   "new_wallet": "Նոր դրամապանակ",
   "newConnection": "Նոր կապ",
+  "no": "Ոչ",
   "no_cards_found": "Ոչ մի քարտ չի գտնվել",
   "no_extra_detail": "Լրացուցիչ մանրամասներ մատչելի չեն",
   "no_id_needed": "Ոչ մի փաստաթուղթ չի պահանջվում!",
@@ -859,6 +864,7 @@
   "setup_2fa": "Հավատարմագրել 2FA",
   "setup_2fa_text": "Cake 2FA-ն աշխատում է TOTP-ի հետ որպես երկրորդ հավատարմագրման գործոն։\n\nCake 2FA-ի TOTP-ը պահանջում է SHA-512 և 8 թվանշանների աջակցություն; դա ավելի մեծ անվտանգություն է ապահովում։ Ավելի շատ տեղեկություն և աջակցվող հավելվածներ կարելի է գտնել ուղեցույցում։",
   "setup_pin": "Հավատարմագրել PIN",
+  "setup_pin_is_failed": "Կարգավորման PIN-ը ձախողվեց սխալմամբ.",
   "setup_successful": "Ձեր PIN-ը հաջողությամբ հավատարմագրվել է!",
   "setup_totp_recommended": "Հավատարմագրել TOTP",
   "setup_warning_2fa_text": "Cake 2FA-ն երկրորդ վավերացում է որոշակի գործողությունների համար դրամապանակում։ Այն նույն անվտանգ չէ, ինչ ցուրտ պահեստավորումը.\n\nԵթե դուք կորցնեք ձեր 2FA հավելվածի կամատեղությունը կամ TOTP բանալիները, դուք կկորցնեք այս դրամապանակի հասանելիությունը։ Դուք կստիպվեք վերականգնել ձեր դրամապանակը մնեմոնիկ սերմերի միջոցով։\n\nCake աջակցությունը չի կարող օգնել ձեզ, եթե դուք կորցնեք ձեր 2FA կամ մնեմոնիկ սերմերը։ Խնդրում ենք կարդալ ուղեցույցը, նախքան Cake 2FA-ն օգտագործելը",
@@ -1152,6 +1158,7 @@
   "yat_error_content": "Այս Yat-ի հետ կապված հասցեներ չկան։ Փորձեք այլ Yat",
   "yat_popup_content": "Այժմ դուք կարող եք ուղարկել և ստանալ կրիպտո Cake Wallet-ում ձեր Yat-ով՝ կարճ, emoji-ների վրա հիմնված օգտագործողի անունով։ Կառավարեք Yat-երը ցանկացած ժամանակ կարգավորումների էկրանին",
   "yat_popup_title": "Ձեր դրամապանակի հասցեն կարող է emoji-ացվել։",
+  "yes": "Այո՛",
   "yesterday": "Երեկ",
   "you_now_have_debit_card": "Դուք այժմ ունեք դեբետային քարտ",
   "you_pay": "Դուք վճարում եք",
