--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -279,6 +279,7 @@
   "deuro_tx_commited_content": "Może to potrwać kilka sekund, zanim transakcja zostanie potwierdzona i wyświetlona na ekranie",
   "device_is_signing": "Urządzenie podpisuje",
   "dfx_option_description": "Kup kryptowaluty za EUR i CHF. Dla klientów detalicznych i korporacyjnych w Europie",
+  "did_you_back_up_seeds": "Czy wykonałeś kopię zapasową wszystkich nasion?",
   "didnt_get_code": "Nie otrzymałeś kodu?",
   "digit_pin": "-cyfrowy PIN",
   "digital_and_physical_card": " cyfrowa i fizyczna karta przedpłacona",
@@ -310,6 +311,9 @@
   "domain_mismatch_description": "Ta strona ma domenę, która nie zgadza się z nadawcą tego żądania. Zatwierdzenie może spowodować utratę środków.",
   "donation_link_details": "Szczegóły linku do darowizny",
   "done": "Gotowe",
+  "duress_pin_description": "Spowoduje to skonfigurowanie kodu PIN pod przymusem – zaawansowanej funkcji, z której większość użytkowników nie powinna korzystać. Tego kodu PIN należy używać wyłącznie w przypadku zagrożenia. Po użyciu tego kodu PIN wszystkie Twoje portfele zostaną usunięte, dlatego przed użyciem upewnij się, że wszystkie Twoje nasiona zostały utworzone w kopii zapasowej.",
+  "durres_PIN": "PIN pod przymusem",
+  "durres_PIN_set_up_successfully": "Kod PIN przymusu został pomyślnie skonfigurowany",
   "e_sign_consent": "Zgoda na podpis elektroniczny",
   "edit": "Edytuj",
   "edit_backup_password": "Edytuj hasło kopii zapasowej",
@@ -548,6 +552,7 @@
   "new_transactions_notifications": "Wysyłaj powiadomienia o nowych transakcjach",
   "new_wallet": "Nowy portfel",
   "newConnection": "Nowe Połączenie",
+  "no": "NIE",
   "no_cards_found": "Nie znaleziono żadnych kart",
   "no_extra_detail": "Brak dodatkowych szczegółów",
   "no_id_needed": "Nie wymaga dowodu!",
@@ -860,6 +865,7 @@
   "setup_2fa": "Skonfiguruj Cake 2FA",
   "setup_2fa_text": "Cake 2FA działa przy użyciu TOTP jako drugiego czynnika uwierzytelniającego.\n\nTOTP w Cake 2FA wymaga SHA-512 oraz obsługi 8-cyfrowych kodów; zapewnia to zwiększone bezpieczeństwo. Więcej informacji i obsługiwane aplikacje znajdziesz w przewodniku.",
   "setup_pin": "Ustaw PIN",
+  "setup_pin_is_failed": "Konfiguracja PIN nie powiodła się z powodu błędu:",
   "setup_successful": "Twój kod PIN został pomyślnie ustawiony!",
   "setup_totp_recommended": "Ustaw TOTP",
   "setup_warning_2fa_text": "Będziesz musiał przywrócić swój portfel z frazy seed.\n\nWsparcie Cake nie będzie w stanie Ci pomóc, jeśli utracisz dostęp do swoich kluczy 2FA lub frazy seed.\nCake 2FA to drugie uwierzytelnienie niektórych działań w portfelu. Przed użyciem Cake 2FA zalecamy zapoznanie się z instrukcją. Cake 2FA nie jest tak bezpieczne jak przechowywanie w zimnym lub sprzętowym portfelu.\n\nJeśli utracisz dostęp do aplikacji 2FA lub kluczy TOTP, Utracisz dostęp do tego portfela.",
@@ -1153,6 +1159,7 @@
   "yat_error_content": "Brak adresów powiązanych z tym Yatem. Wypróbuj inny Yat",
   "yat_popup_content": "Możesz teraz wysyłać i odbierać kryptowaluty w Cake Wallet za pomocą swojego Yat – krótką nazwą użytkownika opartą na emotikonach. Zarządzaj Yats w dowolnym momencie na ekranie ustawień",
   "yat_popup_title": "Twój adres portfela może zostać zamieniony na emoji.",
+  "yes": "Tak",
   "yesterday": "Wczoraj",
   "you_now_have_debit_card": "Masz już kartę debetową",
   "you_pay": "Płacisz",
