--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -279,6 +279,7 @@
   "deuro_tx_commited_content": "Pode levar alguns segundos para a transação confirmar e se refletir na tela",
   "device_is_signing": "O dispositivo está assinando",
   "dfx_option_description": "Compre criptografia com EUR & CHF. Para clientes de varejo e corporativo na Europa",
+  "did_you_back_up_seeds": "Você fez backup de todas as suas sementes?",
   "didnt_get_code": "Não recebeu o código?",
   "digit_pin": "dígitos",
   "digital_and_physical_card": "cartão de débito pré-pago digital e físico",
@@ -310,6 +311,9 @@
   "domain_mismatch_description": "Este site possui um domínio que não corresponde ao remetente desta solicitação. A aprovação pode levar à perda de fundos.",
   "donation_link_details": "Detalhes do link de doação",
   "done": "Feito",
+  "duress_pin_description": "Isso configurará um PIN de coação, um recurso avançado que não deve ser usado pela maioria dos usuários. Este PIN só deve ser usado se você estiver em perigo. Depois de usar este PIN, todas as suas carteiras serão excluídas, portanto, certifique-se de fazer backup de todas as suas sementes antes de usá-lo.",
+  "durres_PIN": "PIN de coação",
+  "durres_PIN_set_up_successfully": "O PIN de coação foi configurado com sucesso",
   "e_sign_consent": "Consentimento de assinatura eletrônica",
   "edit": "Editar",
   "edit_backup_password": "Editar senha de backup",
@@ -550,6 +554,7 @@
   "new_transactions_notifications": "Envie notificações sobre novas transações",
   "new_wallet": "Nova carteira",
   "newConnection": "Nova conexão",
+  "no": "Não",
   "no_cards_found": "Nenhum cartão encontrado",
   "no_extra_detail": "Sem detalhes extras disponíveis",
   "no_id_needed": "Nenhum ID necessário!",
@@ -863,6 +868,7 @@
   "setup_2fa": "Configurar o Cake 2FA",
   "setup_2fa_text": "Cake 2FA funciona usando TOTP como segundo fator de autenticação.\n\nO TOTP do Cake 2FA requer suporte SHA-512 e 8 dígitos; isso proporciona maior segurança. Mais informações e aplicativos suportados podem ser encontrados no guia.",
   "setup_pin": "Configurar PIN",
+  "setup_pin_is_failed": "O pino de configuração falhou com erro:",
   "setup_successful": "Seu PIN foi configurado com sucesso!",
   "setup_totp_recommended": "Configurar TOTP",
   "setup_warning_2fa_text": "Você precisará restaurar sua carteira a partir da semente mnemônica.\n\nO suporte do Cake não poderá ajudá-lo se você perder o acesso ao seu 2FA ou sementes mnemônicas.\nCake 2FA é uma segunda autenticação para determinadas ações na carteira. Antes de usar o Cake 2FA, recomendamos a leitura do guia.NÃO é tão seguro quanto o armazenamento refrigerado.\n\nSe você perder o acesso ao seu aplicativo 2FA ou às chaves TOTP, você perderá o acesso a esta carteira. ",
@@ -1157,6 +1163,7 @@
   "yat_error_content": "Nenhum endereço vinculado a este Yat. Tente outro Yat",
   "yat_popup_content": "Agora você pode enviar e receber criptografia na Cake Wallet com seu Yat - um nome de usuário curto baseado em emoji. Gerenciar Yats a qualquer momento na tela de configurações",
   "yat_popup_title": "O endereço da sua carteira pode ser emojificado.",
+  "yes": "Sim",
   "yesterday": "Ontem",
   "you_now_have_debit_card": "Agora você tem um cartão de débito",
   "you_pay": "Você paga",
