--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -279,6 +279,7 @@
   "deuro_tx_commited_content": "Чтобы подтвердить, может потребоваться пару секунд, чтобы подтвердить и быть отраженным на экране",
   "device_is_signing": "Устройство подписывает",
   "dfx_option_description": "Купить крипто с Eur & CHF. Для розничных и корпоративных клиентов в Европе",
+  "did_you_back_up_seeds": "Вы сделали резервную копию всех своих семян?",
   "didnt_get_code": "Не получить код?",
   "digit_pin": "-значный PIN",
   "digital_and_physical_card": "цифровая и физическая предоплаченная дебетовая карта",
@@ -310,6 +311,9 @@
   "domain_mismatch_description": "Этот веб -сайт имеет домен, который не соответствует отправителю этого запроса. Утверждение может привести к потере средств.",
   "donation_link_details": "Информация о ссылке для пожертвований",
   "done": "Сделанный",
+  "duress_pin_description": "При этом будет установлен ПИН-код принуждения — расширенная функция, которую не следует использовать большинству пользователей. Этот PIN-код следует использовать только в том случае, если вы находитесь в опасности. После использования этого PIN-кода все ваши кошельки будут удалены, поэтому перед его использованием убедитесь, что все ваши начальные данные сохранены.",
+  "durres_PIN": "ПИН-код принуждения",
+  "durres_PIN_set_up_successfully": "PIN-код для принуждения успешно установлен.",
   "e_sign_consent": "Согласие электронной подписи",
   "edit": "Редактировать",
   "edit_backup_password": "Изменить пароль резервной копии",
@@ -549,6 +553,7 @@
   "new_transactions_notifications": "Отправить уведомления о новых транзакциях",
   "new_wallet": "Новый кошелёк",
   "newConnection": "Новое соединение",
+  "no": "Нет",
   "no_cards_found": "Карт не найдено",
   "no_extra_detail": "Нет дополнительных деталей",
   "no_id_needed": "Идентификатор не нужен!",
@@ -862,6 +867,7 @@
   "setup_2fa": "Настройка торта 2FA",
   "setup_2fa_text": "Cake 2FA работает с использованием TOTP в качестве второго фактора аутентификации.\n\nTOTP Cake 2FA требует SHA-512 и поддержки 8 цифр; это обеспечивает повышенную безопасность. Дополнительную информацию и поддерживаемые приложения можно найти в руководстве.",
   "setup_pin": "Настроить PIN",
+  "setup_pin_is_failed": "Установка PIN-кода не удалась из-за ошибки:",
   "setup_successful": "PIN был успешно установлен!",
   "setup_totp_recommended": "Настройка ТОТП",
   "setup_warning_2fa_text": "Cake 2FA — это вторая аутентификация для определенных действий в кошельке. Это НЕ так безопасно, как холодное хранение.\n\nЕсли вы потеряете доступ к своему приложению 2FA или ключам TOTP, вы потеряете доступ к этому кошельку. Вам нужно будет восстановить свой кошелек из мнемонического сида.\n\nСлужба поддержки Cake не сможет вам помочь, если вы потеряете доступ к своим 2FA или мнемоническим идентификаторам.\nПрежде чем использовать Cake 2FA, мы рекомендуем прочитать руководство.",
@@ -1155,6 +1161,7 @@
   "yat_error_content": "Нет адресов, связанных с этим Yat. Попробуйте другой Yat",
   "yat_popup_content": "Теперь вы можете отправлять и получать криптовалюту в Cake Wallet с помощью Yat - короткого имени пользователя на основе эмодзи. Управляйте Yat в любое время при помощи экрана настроек",
   "yat_popup_title": "Адрес вашего кошелька может быть связан с эмодзи",
+  "yes": "Да",
   "yesterday": "Вчера",
   "you_now_have_debit_card": "Теперь у вас есть дебетовая карта",
   "you_pay": "Вы платите",
