--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -279,6 +279,7 @@
   "deuro_tx_commited_content": "لین دین کی تصدیق اور اسکرین پر عکاسی کرنے میں اس میں کچھ سیکنڈ لگ سکتے ہیں",
   "device_is_signing": "ڈیوائس پر دستخط کر رہے ہیں",
   "dfx_option_description": "یورو اور سی ایچ ایف کے ساتھ کرپٹو خریدیں۔ یورپ میں خوردہ اور کارپوریٹ صارفین کے لئے",
+  "did_you_back_up_seeds": "کیا آپ نے اپنے تمام بیجوں کا بیک اپ لیا؟",
   "didnt_get_code": "کوڈ نہیں ملتا؟",
   "digit_pin": "-ہندسوں کا پن",
   "digital_and_physical_card": "  ڈیجیٹل اور فزیکل پری پیڈ ڈیبٹ کارڈ",
@@ -310,6 +311,9 @@
   "domain_mismatch_description": "اس ویب سائٹ میں ایک ڈومین ہے جو اس درخواست کے مرسل سے مماثل نہیں ہے۔ منظوری سے فنڈز کا نقصان ہوسکتا ہے۔",
   "donation_link_details": "عطیہ کے لنک کی تفصیلات",
   "done": "کیا",
+  "duress_pin_description": "اس سے ایک سخت پن قائم ہوگا ، ایک اعلی درجے کی خصوصیت جسے زیادہ تر صارفین استعمال نہیں کرنا چاہئے۔ اس پن کو صرف اس صورت میں استعمال کیا جانا چاہئے جب آپ کو خطرہ ہو۔ اس پن کو استعمال کرنے کے بعد ، آپ کے تمام بٹوے حذف ہوجائیں گے ، لہذا براہ کرم یقینی بنائیں کہ آپ کے تمام بیجوں کو استعمال کرنے سے پہلے اس کا بیک اپ لیا گیا ہے۔",
+  "durres_PIN": "ڈینیس پن",
+  "durres_PIN_set_up_successfully": "ڈینیس پن کو کامیابی کے ساتھ ترتیب دیا گیا ہے",
   "e_sign_consent": "ای سائن کنسنٹ",
   "edit": "ترمیم",
   "edit_backup_password": "بیک اپ پاس ورڈ میں ترمیم کریں۔",
@@ -549,6 +553,7 @@
   "new_transactions_notifications": "نئے لین دین کے بارے میں اطلاعات بھیجیں",
   "new_wallet": "نیا پرس",
   "newConnection": "ﻦﺸﮑﻨﮐ ﺎﯿﻧ",
+  "no": "نہیں",
   "no_cards_found": "کوئی کارڈ نہیں ملا",
   "no_extra_detail": "کوئی اضافی تفصیلات دستیاب نہیں ہیں",
   "no_id_needed": "شناخت کی ضرورت نہیں!",
@@ -863,6 +868,7 @@
   "setup_2fa": "سیٹ اپ کیک 2FA",
   "setup_2fa_text": "    ۔ﮯﮨ ﺎﺗﺮﮐ ﻡﺎﮐ ﮯﺋﻮﮨ ﮯﺗﺮﮐ ﻝﺎﻤﻌﺘﺳﺍ ﺎﮐ TOTP ﺮﭘ ﺭﻮﻃ ﮯﮐ ﺮﺼﻨﻋ ﯽﻘﯾﺪﺼﺗ ﮮﺮﺳﻭﺩ 2FA ﮏﯿﮐ",
   "setup_pin": "PIN سیٹ اپ کریں۔",
+  "setup_pin_is_failed": "سیٹ اپ پن غلطی کے ساتھ ناکام ہے:",
   "setup_successful": "آپ کا PIN کامیابی کے ساتھ ترتیب دیا گیا ہے!",
   "setup_totp_recommended": "TOTP ۔ﮟﯾﺮﮐ ﭖﺍ ﭧﯿﺳ",
   "setup_warning_2fa_text": "                 ۔ﯽﮔﻮﮨ ﺕﺭﻭﺮﺿ ﯽﮐ ﮯﻧﺮﮐ ﻝﺎﺤﺑ ﻮﮐ ﮮﻮﭩﺑ ﮯﻨﭘﺍ ﮯﺳ ﺞﯿﺑ ﮯﮐ ﺖﺷﺍﺩﺩﺎﯾ ﻮﮐ ﭖﺁ",
@@ -1156,6 +1162,7 @@
   "yat_error_content": "اس Yat کے ساتھ کوئی پتے منسلک نہیں ہیں۔ ایک اور یات آزمائیں۔",
   "yat_popup_content": "اب آپ Cake Wallet میں اپنے Yat کے ساتھ کرپٹو بھیج اور وصول کر سکتے ہیں - ایک مختصر، ایموجی پر مبنی صارف نام۔ ترتیبات کی سکرین پر کسی بھی وقت Yats کا نظم کریں۔",
   "yat_popup_title": "آپ کے بٹوے کا پتہ ایموجائز کیا جا سکتا ہے۔",
+  "yes": "ہاں",
   "yesterday": "کل",
   "you_now_have_debit_card": "اب آپ کے پاس ڈیبٹ کارڈ ہے۔",
   "you_pay": "تم ادا کرو",
