--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -279,6 +279,7 @@
   "deuro_tx_commited_content": "Transakce může trvat několik sekund, aby se potvrdila a odrážela se na obrazovce",
   "device_is_signing": "Zařízení se podpisu",
   "dfx_option_description": "Koupit krypto s EUR & CHF. Pro maloobchodní a firemní zákazníky v Evropě",
+  "did_you_back_up_seeds": "Zálohovali jste všechna semena?",
   "didnt_get_code": "Nepřišel Vám kód?",
   "digit_pin": "-číselný PIN",
   "digital_and_physical_card": " digitální a fyzické předplacené debetní karty,",
@@ -310,6 +311,9 @@
   "domain_mismatch_description": "Tento web má doménu, která neodpovídá odesílateli této žádosti. Schválení může vést ke ztrátě finančních prostředků.",
   "donation_link_details": "Podrobnosti odkazu na darování",
   "done": "Hotovo",
+  "duress_pin_description": "Tím se nastaví nátlakový PIN, pokročilá funkce, kterou by většina uživatelů neměla používat. Tento PIN používejte pouze v případě nebezpečí. Po použití tohoto PIN budou všechny vaše peněženky smazány, proto se prosím před jeho použitím ujistěte, že jsou všechna vaše semena zálohována.",
+  "durres_PIN": "Nátlakový PIN",
+  "durres_PIN_set_up_successfully": "Nátlakový PIN byl úspěšně nastaven",
   "e_sign_consent": "E-Sign souhlas",
   "edit": "Upravit",
   "edit_backup_password": "Upravit heslo pro zálohy",
@@ -549,6 +553,7 @@
   "new_transactions_notifications": "Zašlete oznámení o nových transakcích",
   "new_wallet": "Nová peněženka",
   "newConnection": "Nové připojení",
+  "no": "Žádný",
   "no_cards_found": "Žádné karty nenalezeny",
   "no_extra_detail": "K dispozici nejsou žádné další podrobnosti",
   "no_id_needed": "Žádné ID není potřeba!",
@@ -861,6 +866,7 @@
   "setup_2fa": "Nastavení Cake 2FA",
   "setup_2fa_text": "Cake 2FA pracuje s použitím TOTP jako druhého autentizačního faktoru.\n\nTOTP Cake 2FA vyžaduje SHA-512 a podporu 8 číslic; to poskytuje zvýšenou bezpečnost. Další informace a podporované aplikace naleznete v průvodci.",
   "setup_pin": "Nastavit PIN",
+  "setup_pin_is_failed": "Nastavení PIN se nezdařilo s chybou:",
   "setup_successful": "Váš PIN byl úspěšně nastaven!",
   "setup_totp_recommended": "Nastavení TOTP",
   "setup_warning_2fa_text": "Budete muset obnovit svou peněženku z mnemotechnického semínka.\n\nPodpora dortů vám nebude schopna pomoci, pokud ztratíte přístup ke svým 2FA nebo mnemotechnickým semenům.\nCake 2FA je druhá autentizace pro určité akce v peněžence. Před použitím Cake 2FA doporučujeme přečíst si průvodce.NENÍ tak bezpečný jako skladování v chladu.\n\nPokud ztratíte přístup ke své aplikaci 2FA nebo klíčům TOTP, ztratíte přístup k této peněžence. ",
@@ -1154,6 +1160,7 @@
   "yat_error_content": "Žádná adresa není spojena s tímto Yatem. Zkuste jiný Yat",
   "yat_popup_content": "Nyní můžete posílat a přijímat crypto v Cake Wallet se svým Yatem - krátkým uživatelským jménem složeným z emoji. Spravujte kdykoliv Yaty na stránce s nastavením",
   "yat_popup_title": "Adresa Vaší peněženky může být emojifikována.",
+  "yes": "Ano",
   "yesterday": "Včera",
   "you_now_have_debit_card": "Nyní máte debetní kartu",
   "you_pay": "Zaplatíte",
