--- a/assets/text/Release_Notes.txt
+++ b/assets/text/Release_Notes.txt
@@ -1,10 +1,3 @@
-Improve wallets performance
-Litecoin and MWEB support in Cupcake Android
-Ethereum and EVM chains enhancements
-Improved EVM fee estimation
-Improvements for AnyPay
-Better automatic node switching
-New navbar/tab navigation
-WalletConnect enhancements
-Add Dark and tintable app icons
+Fix QR scanning
+UI enhancements
 Bug fixes
