--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -415,6 +415,7 @@
   "forgot_password": "Забравена парола",
   "freeze": "Замразяване",
   "frequently_asked_questions": "Често задавани въпроси",
+  "frigate_electrum_server_warning": "Този сървър на Frigate Electrum споделя вашите ключове за тихи плащания със сървъра и може да влоши поверителността ви. Продължете само ако имате доверие на този сървър.",
   "from": "От",
   "frozen": "Замразени",
   "frozen_balance": "Замразен баланс",
