--- a/res/values/strings_gn.arb
+++ b/res/values/strings_gn.arb
@@ -313,6 +313,7 @@
   "forgot_password": "Che resarái che ñe’ẽñemi-gui.",
   "freeze": "Ku’e’ỹme",
   "frequently_asked_questions": "Ñeporandu oje’e meméva",
+  "frigate_electrum_server_warning": "Ko servidor electrum fragata rehegua okomparti nde clave de pagos silenciosos pe servidor ndive ha ikatu omboguejy nde privacidad. Eñepyrũ ejerovia ramo añoite ko servidor rehe.",
   "frozen": "Oku’e’ỹva",
   "full_balance": "Mba’e repy enteroite rehegua",
   "generate_name": "téra ñemoheñói",
