--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -415,6 +415,7 @@
   "forgot_password": "Manta Kalmar wucewa",
   "freeze": "Daskare",
   "frequently_asked_questions": "Tambayoyin da ake yawan yi",
+  "frigate_electrum_server_warning": "Wannan uwar garken lantarki yana raba makullin da kuka yi da sabar kuma yana iya lalata sirrin ku. Ci gaba kawai idan kun amince da wannan uwar garke.",
   "from": "Daga",
   "frozen": "Daskararre",
   "frozen_balance": "Daidaituwa mai sanyi",
