--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -415,6 +415,7 @@
   "forgot_password": "पासवर्ड भूल गए",
   "freeze": "फ्रीज",
   "frequently_asked_questions": "अक्सर पूछे जाने वाले प्रश्न",
+  "frigate_electrum_server_warning": "यह फ्रिगेट इलेक्ट्रम सर्वर आपकी साइलेंट पेमेंट कुंजी को सर्वर के साथ साझा करता है और आपकी गोपनीयता को ख़राब कर सकता है। यदि आपको इस सर्वर पर भरोसा है तो ही आगे बढ़ें।",
   "from": "से",
   "frozen": "जमा हुआ",
   "frozen_balance": "जमे हुए संतुलन",
@@ -621,8 +622,8 @@
   "payjoin_unavailable_sheet_title": "Payjoin अनुपलब्ध क्यों है?",
   "payment_id": "भुगतान ID: ",
   "payment_made_easy": "भुगतान आसान किया गया",
-  "Payment_was_received": "आपका भुगतान प्राप्त हो गया था।",
   "payment_was_received": "आपका भुगतान प्राप्त हुआ था।",
+  "Payment_was_received": "आपका भुगतान प्राप्त हो गया था।",
   "payments": "भुगतान",
   "pending": " (अपूर्ण)",
   "percentageOf": "${amount} का",
