--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -415,6 +415,7 @@
   "forgot_password": "စကားဝှက်မေ့နေပါသလား",
   "freeze": "အေးခဲ",
   "frequently_asked_questions": "မေးလေ့ရှိသောမေးခွန်းများ",
+  "frigate_electrum_server_warning": "ဤဖရီးဂိတ်ပိတ်ဖြည့်ဖြည့် electrum server သည်သင်၏အသံတိတ်ငွေပေးချေမှုသော့များကိုဆာဗာဖြင့်ဝေမျှသည်။ သင်၏ privacy ကိုယုတ်ညံ့စေနိုင်သည်။ သင်ဤဆာဗာကိုယုံကြည်စိတ်ချမှသာဆက်လက်ဆောင်ရွက်ပါ။",
   "from": "မှ",
   "frozen": "ဖြူဖြူ",
   "frozen_balance": "လက်ကျန်ငွေ",
