--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -415,6 +415,7 @@
   "forgot_password": "Забули пароль",
   "freeze": "Заморозити",
   "frequently_asked_questions": "Часті запитання",
+  "frigate_electrum_server_warning": "Цей сервер Frigate Electrum надає серверу доступ до ключів тихих платежів і може погіршити вашу конфіденційність. Продовжуйте, лише якщо ви довіряєте цьому серверу.",
   "from": "З",
   "frozen": "Заморожено",
   "frozen_balance": "Заморожений баланс",
