--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -415,6 +415,7 @@
   "forgot_password": "پاسورڈ بھول گے",
   "freeze": "منجمد",
   "frequently_asked_questions": "اکثر پوچھے گئے سوالات",
+  "frigate_electrum_server_warning": "یہ فریگیٹ الیکٹرم سرور آپ کی خاموش ادائیگیوں کی چابیاں سرور کے ساتھ بانٹتا ہے اور آپ کی رازداری کو کم کرسکتا ہے۔ صرف اس صورت میں آگے بڑھیں جب آپ کو اس سرور پر اعتماد ہے۔",
   "from": "سے",
   "frozen": "منجمد",
   "frozen_balance": "منجمد توازن",
