--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -416,6 +416,7 @@
   "forgot_password": "Ẹ ti gbàgbé ọ̀rọ̀ aṣínà",
   "freeze": "Tì pa",
   "frequently_asked_questions": "Àwọn ìbéèrè la máa ń béèrè",
+  "frigate_electrum_server_warning": "Ẹrọ Iyọlẹnu yii ṣe alabapin awọn bọtini isanwo ti ipalọlọ rẹ pẹlu olupin ati pe o le bajẹ asiri rẹ. Tẹsiwaju nikan ti o ba gbẹkẹle olupin yii.",
   "from": "Lati",
   "frozen": "Ó l'a tì pa",
   "frozen_balance": "Iwontunwonsi ti o tutu",
